--- a/aws-keys/manifests/secret-store.yaml
+++ b/aws-keys/manifests/secret-store.yaml
@@ -1,5 +1,5 @@
 apiVersion: external-secrets.io/v1beta1
-kind: SecretStore
+kind: ClusterSecretStore
 metadata:
   name: managed-secretstore
   namespace: <namespace>
@@ -12,7 +12,9 @@ spec:
         secretRef:
           accessKeyIDSecretRef:
             name: awssm-secret
+            namespace: external-secret
             key: access-key
           secretAccessKeySecretRef:
             name: awssm-secret
+            namespace: external-secret
             key: secret-access-key
