--- a/vault/app/init.yaml
+++ b/vault/app/init.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: vault-server
-  namespace: argocd
+  namespace: openshift-gitops
 spec:
   destination:
     namespace: vault
