--- a/vault/config/vault-secret-store.yaml
+++ b/vault/config/vault-secret-store.yaml
@@ -5,13 +5,14 @@ metadata:
   name: vault-backend
 spec:
   provider:
-    server: "http://vault-server-internal.vault-server.svc.cluster.local:8200"
-    path: "secret"
-    version: "v2"
-    auth:
-      tokenSecretRef:
-        name: "vault-token"
-        key: "token"
+    vault:
+      server: "http://vault-server-internal.vault-server.svc.cluster.local:8200"
+      path: "secret"
+      version: "v2"
+      auth:
+        tokenSecretRef:
+          name: "vault-token"
+          key: "token"
 ---
 apiVersion: v1
 kind: Secret
