--- a/vault/config/vault-secret-store.yaml
+++ b/vault/config/vault-secret-store.yaml
@@ -20,3 +20,21 @@ metadata:
   name: vault-token
 data:
   token: "cm9vdA=="
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: vault-test
+spec:
+  refreshInterval: 1m
+  secretStoreRef:
+    name: vault-backend
+    kind: SecretStore
+  target:
+    name: test-vault-secret
+    creationPolicy: Owner
+  data:
+  - secretKey: test
+    remoteRef:
+      key: data/hello
+      property: foo
