test vault pull

--- a/vault/config/vault-secret-store.yaml
+++ b/vault/config/vault-secret-store.yaml
@@ -22,19 +22,14 @@ data:
   token: "cm9vdA=="
 ---
 apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
+kind: PushSecret
 metadata:
-  name: vault-test
+  name: prime-vault
 spec:
   refreshInterval: 1m
-  secretStoreRef:
-    name: vault-backend
-    kind: SecretStore
-  target:
-    name: test-vault-secret
-    creationPolicy: Owner
+  secretStoreRefs:
+    - name: vault-backend
+      kind: SecretStore
   data:
-  - secretKey: test
-    remoteRef:
-      key: hello
-      property: foo
+  - key: test
+    value: test-value
