test vault pull

--- a/vault/config/vault-secret-store.yaml
+++ b/vault/config/vault-secret-store.yaml
@@ -21,8 +21,8 @@ metadata:
 data:
   token: "cm9vdA=="
 ---
-apiVersion: external-secrets.io/v1beta1
-kind: PushSecret
+apiVersion: external-secrets.io/v1alpha1
+kind: foo
 metadata:
   name: prime-vault
 spec:
