test vault pull

--- a/vault/config/vault-secret-store.yaml
+++ b/vault/config/vault-secret-store.yaml
@@ -22,7 +22,7 @@ data:
   token: "cm9vdA=="
 ---
 apiVersion: external-secrets.io/v1alpha1
-kind: foo
+kind: PushSecret
 metadata:
   name: prime-vault
 spec:
