--- a/vault/config/vault-secret-store.yaml
+++ b/vault/config/vault-secret-store.yaml
@@ -21,15 +21,20 @@ metadata:
 data:
   token: "cm9vdA=="
 ---
-apiVersion: external-secrets.io/v1alpha1
-kind: PushSecret
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
 metadata:
-  name: prime-vault
+  name: vault-test
 spec:
   refreshInterval: 1m
-  secretStoreRefs:
-    - name: vault-backend
-      kind: SecretStore
+  secretStoreRef:
+    name: vault-backend
+    kind: SecretStore
+  target:
+    name: test-vault-secret
+    creationPolicy: Owner
   data:
-  - key: test
-    value: test-value
+  - secretKey: test
+    remoteRef:
+      key: hello
+      property: foo
