--- a/vault/config/kustomization.yaml
+++ b/vault/config/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - vault-secret-store.yaml
+  # - vault-secret-store.yaml
   - route.yaml
 
 helmCharts:
