--- a/patterns/secrets-csi-driver/foundational/providers/vault/kustomization.yaml
+++ b/patterns/secrets-csi-driver/foundational/providers/vault/kustomization.yaml
@@ -3,6 +3,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+resources:
+  - rbac.yaml
+
 helmCharts:
   - name: vault
     repo: https://helm.releases.hashicorp.com
