--- a/patterns/secrets-csi-driver/foundational/providers/vault/rbac.yaml
+++ b/patterns/secrets-csi-driver/foundational/providers/vault/rbac.yaml
@@ -1,7 +1,8 @@
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: system:openshift:scc:hostmount-anyuid
+  name: vault-csi-provider-cr
 rules:
 - apiGroups:
   - security.openshift.io
@@ -11,14 +12,15 @@ rules:
   - securitycontextconstraints
   verbs:
   - use
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: system:openshift:scc:hostmount-anyuid
+  name: vault-csi-provider-crb
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: system:openshift:scc:hostmount-anyuid
+  name: vault-csi-provider-cr
 subjects:
 - kind: ServiceAccount
   name: vault-csi-provider-csi-provider
