--- a/patterns/secrets-csi-driver/foundational/providers/vault/rbac.yaml
+++ b/patterns/secrets-csi-driver/foundational/providers/vault/rbac.yaml
@@ -7,7 +7,7 @@ rules:
 - apiGroups:
   - security.openshift.io
   resourceNames:
-  - hostmount-anyuid
+  - privileged
   resources:
   - securitycontextconstraints
   verbs:
