testing csi driver

--- a/vault/config/kustomization.yaml
+++ b/vault/config/kustomization.yaml
@@ -12,6 +12,8 @@ helmCharts:
     releaseName: vault-server
     namespace: vault-server
     valuesInline:
+      linux:
+        providersDir: "/var/run/secrets-store-csi-providers"
       global:
         openshift: true
       server:
