--- a/vault/config/kustomization.yaml
+++ b/vault/config/kustomization.yaml
@@ -15,6 +15,9 @@ helmCharts:
       global:
         openshift: true
       server:
+        image:
+          repository: "registry.connect.redhat.com/hashicorp/vault"
+          tag: "1.8.0-ubi"
         dev:
           enabled: true
         enabled: true
