add patch for bug in csi driver helm

--- a/vault/config/kustomization.yaml
+++ b/vault/config/kustomization.yaml
@@ -25,5 +25,5 @@ helmCharts:
         daemonSet:
           providersDir: "/var/run/secrets-store-csi-providers"
 
-patchesStrategicMerge:
+patches:
   - daemonset-patch.yaml
