--- a/vault/config/daemonset-patch.yaml
+++ b/vault/config/daemonset-patch.yaml
@@ -1,11 +1,4 @@
-apiVersion: apps/v1
-kind: DaemonSet
-metadata:
-  name: vault-server-csi-provider
-spec:
-  template:
-    spec:
-      containers:
-      - name: vault-csi-provider
-        securityContext:
-          privileged: true
+- op: add
+  path: /spec/template/spec/containers/0/securityContext
+  value:
+    privileged: true
