--- a/vault/config/kustomization.yaml
+++ b/vault/config/kustomization.yaml
@@ -2,28 +2,33 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - route.yaml
-  - rbac.yaml
+- route.yaml
+- rbac.yaml
 
 helmCharts:
-  - name: vault
-    repo: https://helm.releases.hashicorp.com
-    version: 0.27.0
-    releaseName: vault-server
-    namespace: vault-server
-    valuesInline:
-      global:
-        openshift: true
-      server:
-        dev:
-          enabled: true
+- name: vault
+  namespace: vault-server
+  releaseName: vault-server
+  repo: https://helm.releases.hashicorp.com
+  valuesInline:
+    csi:
+      daemonSet:
+        providersDir: /var/run/secrets-store-csi-providers
+      enabled: true
+    global:
+      openshift: true
+    injector:
+      enabled: false
+    server:
+      dev:
         enabled: true
-      injector:
-        enabled: false
-      csi:
-        enabled: true
-        daemonSet:
-          providersDir: "/var/run/secrets-store-csi-providers"
+      enabled: true
+  version: 0.27.0
 
 patches:
-  - daemonset-patch.yaml
+  - target:
+      group: apps
+      version: v1
+      kind: DaemonSet
+      name: vault-server-csi-provider
+    path: daemonset-patch.yaml
