--- a/patterns/secrets-csi-driver/foundational/provider/vault/kustomization.yaml
+++ b/patterns/secrets-csi-driver/foundational/provider/vault/kustomization.yaml
@@ -2,7 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- route.yaml
+- ../../driver/kustomization.yaml
+- rbac.yaml
 
 helmCharts:
 - name: vault
@@ -11,13 +12,21 @@ helmCharts:
   repo: https://helm.releases.hashicorp.com
   valuesInline:
     csi:
-      enabled: false
+      daemonSet:
+        providersDir: /var/run/secrets-store-csi-providers
+      enabled: true
     global:
       openshift: true
     injector:
       enabled: false
     server:
-      dev:
-        enabled: true
-      enabled: true
+      enabled: false
   version: 0.27.0
+
+patches:
+  - target:
+      group: apps
+      version: v1
+      kind: DaemonSet
+      name: vault-server-csi-provider
+    path: daemonset-patch.yaml
