--- a/patterns/external-secrets/team-control/app/init.yaml
+++ b/patterns/external-secrets/team-control/app/init.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: team-controller
-  namespace: argocd
+  namespace: openshift-gitops
 spec:
   destination:
     namespace: team-control
