change secret ref

--- a/patterns/external-secrets/team-control/helm-chart/templates/team-external-secret.yaml
+++ b/patterns/external-secrets/team-control/helm-chart/templates/team-external-secret.yaml
@@ -14,7 +14,7 @@ spec:
   data:
   - secretKey: token
     remoteRef:
-      key: {{ .name }}
+      key: {{ .name }}-creds
       property: token
 ---
 {{- end }}
